--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,18 @@
     transform: rotate(360deg);
   }
 }
-.image{
-  width: 50px;
-  height: 50px;
+.image-style{
+  width: 100px;
+  height: 100px;
+}
+.product-container{
+  width: 60%;
+}
+.card{
+  width: 30%;
+  display: inline-block;
+  margin-right: 10px;
+}
+.cart-container{
+  width: 40%;
 }
